fix: wrap search with a container

--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -124,6 +124,11 @@
     }
 }
 
+.searchContainer {
+    display: flex;
+    gap: var(--givewp-spacing-2);
+}
+
 .filtersRow {
     align-items: center;
     background-color: var(--givewp-neutral-50);
